# 3D_Triangulation

./: 2D_Triangulation.cpp  3D_Triangulation.cpp  CMakeLists.txt
helpers/: CMakeLists.txt  bc_tet.cpp  sobol.cpp  writer.cpp
